<resources>


    <string name="app_name">Patitas sanas y felices</string>


    <string name="action_settings">Settings</string>
    <string name="string1">Patitas sanas y felices</string>

    <string name="iniciarsesion">Iniciar Sesión </string>
    <string name="crearcuenta">Crear Cuenta </string>
    <string name="tituloiniciarsesion">Iniciar Sesión </string>

    <string name="datos">Ingrese los siguientes datos para crear su propia cuenta y pertenecer a esta gran comunidad. </string>

    <string name="nombre">Ingrese su Nombre </string>
    <string name="apellido">Ingrese su Apellido</string>
    <string name="email">Email: nombre@example.com </string>
    <string name="edad">Ingrese su edad</string>
    <string name="usuario">Ingrese su usuario </string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="guardardato">Guardar datos</string>


    <string name="textocrearcuenta">Si aún no tienes una cuenta no esperes más y pulsa en "crear cuenta"</string>
    <string name="textoiniciarsesion">Si ya estas registrado solo pulsa en "iniciar sesión"</string>

    <string name="bien">Felicitaciones!!!</string>
    <string name="title_activity_login">Sign in</string>


    <string name="amdusuario">Administración usuario</string>
    <string name="amdmascota">Administración mascotas</string>
    <string name="integracion">Integración y cariño</string>
    <string name="aliementar">Alimentación y descanso</string>
    <string name="paseo">Paseo en compañia</string>
    <string name="veterinario">Veterinario</string>
    <string name="esterilizacion">Esterilización</string>
    <string name="salud">Atender salud</string>
    <string name="adiestrar">Adiestrar sin golpes</string>
    <string name="adopcion">Adopción</string>

    //adm usuario

    <string name="textView15">¡Hola! En este Módulo podras cambiar alguno de tus datos, cerrar sesión y eliminar tu cuenta.</string>

    <string name="admusuario_editar">Editar usuario</string>
    <string name="admusuario_cerrarsesion">Cerrar sesión</string>
    <string name="admusuario_eliminarcuenta">Eliminar cuenta</string>

    //adm mascota

    <string name="textView16">Módulo en el cual podras agregar una nueva mascota o cambiar algunos datos de ellas y tambien quitarla de la app.</string>

    <string name="admmasota_agregar">Agregar mascota</string>
    <string name="admmascota_editar">Editar mascota</string>
    <string name="admmascota_quitar">Quitar mascota</string>

    //Integracion y cariño

    <string name="textView17">El amor de una mascota hacia su dueño es uno de los sentimientos mas sinceros y puros que existen.</string>

    <string name="quieres_jugar">Aprendamos de ellos</string>
    <string name="collar">Collar de identificación</string>
    <string name="ayuda">Ayuda y consejos</string>

    //Collar de identificacion
    <string name="modulo_collar">El collar de identificación para tu mascota es importante a la hora de ser devuelta a sus dueños en caso de que ésta se extravíe.</string>
    <string name="collar_pregunta">¿Su mascota tiene collar de identificación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>


    <string name="visualizar_si">

    ¡Bien hecho! De esta forma su mascota podrá ser devuelta en caso de que se pierda (esperamos que esto no suceda nunca).

    </string>



    //interaccion
    <string name="descripcion">Mira cuan importantes son cada una de estas acciones para tu mascota.</string>
    <string name="jugar">Jugar</string>
    <string name="acariciar">Acariciar</string>
    <string name="Conversar">Conversar</string>


    <string name="visualizar_jugar">

        El jugar con tu mascota es una forma divertida de enseñarles obediencia.\r\n\r\n

        Para los perros, el juego es una parte importante del proceso de adiestramiento. Además, los juegos interactivos pueden consolidar el vínculo entre usted y su mascota.\r\n\r\n

        El juego es imprescindible, ya que un perro aburrido encontrará algo que hacer y, muy a menudo, esto significa mordisquear hasta destrozarlo todo. Este problema puede corregirse fácilmente si se le dan al perro juguetes apropiados para morder.\r\n\r\n

        Cuando se tiene un perro hay que asegurarse de que sus necesidades básicas estén cubiertas; por ejemplo, comida, bebida, sueño, paseos… Sin embargo, hay que tener en cuenta que el juego es una de las necesidades básicas de los perros. Es una actividad que le ayudará a desarrollarse intelectual y emocionalmente y es especialmente importante si el perro pasa mucho tiempo solo dentro de casa.\r\n\r\n

        El juego en los perros ayuda al desarrollo intelectual e incita a los perros a comprender mejor su entorno, conocer el funcionamiento de las cosas, aprender reglas básicas de conducta, aprender a controlar su fuerza y a desarrollar habilidades y destrezas, como por ejemplo reaccionar adecuadamente a los estímulos.\r\n\r\n

        El juego además les ayuda a socializarse, tanto si juegan con otros perros o con humanos, y desarrollan diferentes habilidades con distintos compañeros de juegos. Los juegos con perros estimulan la fuerza bruta y el instinto cazador y los juegos con humanos desarrollan la cooperación y la inteligencia y son más dinámicos. En ambos casos los perros aprenden a respetar a los demásademás de liberar energía y desahogarse, lo que impide la aparición de estrés y ansiedad y hace que el perro sea menos violento. Además, los juegos con humanos ayudan a reforzar el vínculo amo-perro.


    </string>

    <string name="visualizar_acariciar">


    Acariciarlos nos entrega beneficios a nosotros mismos. Estudios han señalado que ayuda a disminuir la presión arterial, así como a bajar los niveles de depresión y sedentarismo.\n\n

    Una parte importante de relacionarnos con nuestras mascotas, es la de entregarles cariño ¿Y qué mejor que a través de caricias? Para ellos, son una forma de aliviar el estrés que pueden estar sintiendo. Por ejemplo, si sufren algún dolor, ayuda a que se tranquilicen. Además, podemos tener conocimiento del cuerpo de nuestra mascota y así poder reconocer a tiempo, cualquier anomalía que pudiese presentarse.\n\n

        En el caso de los perros, y específicamente cuando se trata de un perro desconocido, es importantísimo preguntar en primer lugar al dueño. Puede que el perrito tenga ciertos lugares que no le gusta que le toquen o tal vez es un tanto nervioso o desconfiado. También en el caso de los perritos sin dueño, puedes partir por darle a oler el dorso de tu mano, como presentándote. Una vez que veas que el animal no se comporta de forma agresiva o a la
        defensiva (gruñir, saltar, o esconder la cola entre las piernas) puedes proseguir y acariciar su lomo. Y ya cuando la confianza sea mayor, puedes acariciar su cabeza, e incluso la panza y orejas, si es que ya te considera su amigo.\n\n


    </string>

    <string name="visualizar_conversar">

        El hablarle a tu mascota desarrolla un lazo integral entre tú perro y tú por qué esta acción ayuda a la mascota a entender si la quieres, si está haciendo lo correcto, si hizo algo mal, es por ello que es de suma importancia comunicarte con tu mascota, de esta forma le estás expresando amor y educando a la misma vez.\n\n

        Siempre hemos sabido que los perros son de los animales más inteligentes y asertivos que hemos domesticado – no por nada se dice que es el mejor amigo del hombre -. Pero recientemente se realizó una investigación que podría corroborar este concepto de inteligencia y comprensión que tienen los perritos con los humanos. Se trata del investigador canino Stanley Coren, de la Universidad de British Columbia, en Canadá, quien pudo determinar que
        los perros no sólo pueden comprender hasta 165 palabras humanas en promedio, sino que además son capaces de resolver problemas complejos, asimilados al desarrollo intelectual de un niño de 2 años aproximadamente: entre algunas cosas que se estudió, se descubrió que tenían una idea básica de aritmética ¡sí, aritmética! Es decir, pueden contar hasta cinco, o encontrar errores en operaciones matemáticas simples.\n\n

        Además, son capaces de aprender, sin la ayuda humana, el mejor camino para llegar a un lugar determinado, o de actuar y engañar a otros perros, e incluso a humanos, con tal de conseguir alguna recompensa o premio.\n\n

    </string>

    //ayuda y consejos integracion y cariño

    <string name="tips">Tips para jugar con tu mascota</string>

    <string name="tips_jugar">

         <b>
            Tips para jugar con tu mascota \n\n
         </b>

    Nunca hagas enojar a tu perro mientras juegan a tirar la cuerda o el trapo . El perro puede confundir el juego con algo peligroso en donde debe defenderse.\n\n

    Permite que tu perro tenga libre acceso a 3 o 4 juguetes que pueda morder y con los que pueda jugar el solo.\n\n

    Guarda los super juguetes (o su juguete favorito) para que los uses cuando tú juegues con él. \n\n

    Si detectas que alguno de sus juguetes lo obsesiona o lo sobre estimula, intercámbiaselo por uno que no lo altere tanto. No es bueno fomentar rituales obsesivos.\n\n

    Usa el juego para premiar sus buenas conductas. \n\n

    Ten cuidado con los cachorros pequeños, porque suelen ser más frágiles de lo que aparentan. \n\n

    Evita los juegos demasiado competitivos o agresivos. los juegos de fuerza y los forcejeos pueden enseñar a tu perro a ser agresivo con otras personas o con otros perros.\n\n

    Evita los juegos con palos o piedras. los palos pueden partirse en la boca. \n\n

    Tu perro tiene que aprender a escucharte. si no hace lo que tú le pides, deja de jugar e ignórale. \n\n

    Los momentos de juego son los que se deben aprovechar para educar al cachorro, tanto en el morder como en la obediencia y demostrar que es el dueño el que tiene el control. Para ello, cuando vayas a darle un juguete, lánzalo no se lo des en la boca, porque
    interpretará que te lo ha quitado y que tiene él el control. Por la misma razón, nunca vayas detrás suyo a quitarle un juguete, debes enseñarle que sea él quien te lo traiga o quien te persiga a ti. \n\n


         <b>
            Datos que debe poseer un collar de identificación \n\n
        </b>

            -Nombre de la mascota. \n
            -Numero de contacto del dueño ya sea celular o red fija.




    </string>



    </resources>

