<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_collarv2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modulo_collar"
        android:textStyle="italic"
        android:textColor="@color/blanco"
        android:id="@+id/textView18"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_below="@+id/imageView17"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/collar_pregunta"
        android:id="@+id/textView19"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:gravity="center" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        android:id="@+id/radioButton"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="79dp"
        android:layout_marginStart="79dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/radioButton2"
        android:layout_alignTop="@+id/radioButton"
        android:layout_toRightOf="@+id/radioButton"
        android:layout_toEndOf="@+id/radioButton"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView17"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/collarv3" />

</RelativeLayout>