<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_admmascota">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        ></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView15"
        android:src="@drawable/perro_admmascota"
        android:layout_marginBottom="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView16"
        android:id="@+id/textView16"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/blanco"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admmasota_agregar"
        android:backgroundTint="@color/verdeclaro"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admmascota_editar"
        android:backgroundTint="@color/verdeclaro"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admmascota_quitar"
        android:backgroundTint="@color/verdeclaro"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />


</RelativeLayout>