<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_integracion">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView16"
        android:src="@drawable/integracion_v2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="240dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView17"
        android:textColor="@color/blanco"
        android:textStyle="italic"
        android:textSize="18dp"
        android:id="@+id/textView17"
        android:layout_marginBottom="215dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quieres_jugar"
        android:id="@+id/button7"
        android:backgroundTint="@color/marinoclaro"
        android:textColor="@color/blanco"
        android:layout_alignTop="@+id/textView17"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collar"
        android:backgroundTint="@color/marinoclaro"
        android:textColor="@color/blanco"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda"
        android:id="@+id/button9"
        android:backgroundTint="@color/marinoclaro"
        android:textColor="@color/blanco"
        android:layout_below="@+id/button8"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8" />


</RelativeLayout>