<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_admusuario">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        ></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView15"
        android:src="@drawable/perro_admusuariov2"
        android:layout_marginBottom="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView15"
        android:id="@+id/textView15"
        android:textStyle="italic"
        android:textColor="@color/blanco"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="238dp"
        android:textSize="18dp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admusuario_editar"
        android:backgroundTint="@color/rosado"
        android:id="@+id/button"
        android:layout_alignTop="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentBottom="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admusuario_cerrarsesion"
        android:backgroundTint="@color/rosado"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/admusuario_eliminarcuenta"
        android:backgroundTint="@color/rosado"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />


</RelativeLayout>