<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/interaccionv2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textStyle="italic"
        android:id="@+id/textView20"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:id="@+id/radiogroup">


        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:id="@+id/radioButton3"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/acariciar"
            android:id="@+id/radioButton4"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Conversar"
            android:id="@+id/radioButton5"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/scrollView2"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView21"

                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="40dp"
                        android:textSize="18sp" />
                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

    </RadioGroup>


</RelativeLayout>